--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Menu</title>
 </style>
 <style>       
     h1, h2, h3{
@@ -64,8 +64,8 @@ background-color: wheat;
         <div class="topnav">
          <a href="https://semester-project-homepage.netlify.app/">Home</a>
          <a href="https://semester-project-about.netlify.app/">About</a>
-         <a href="">Menu</a>
-         <a href="">Order</a>
+         <a href="https://semester-project-menu.netlify.app/">Menu</a>
+         <a href="https://semester-project-order.netlify.app/">Order</a>
        </div>
 
 </body>
@@ -75,14 +75,10 @@ background-color: wheat;
     
 </head>
 
-<section> 
-    <h2 style="background-color:white;"> About</h2>
 
-    <p style="background-color:white;">Mom and Pop's Bakery was founded February 20, 1998. </p>
-</section>
 
 <section>
-    <h2 style="background-color:white;"> What To Expect</h2>
+    <h2 style="background-color:white;"> Menu</h2>
 
         <ol style="background-color:white;">
 
@@ -104,9 +100,6 @@ alt="Bread" width="460" height="345">
             <li>Muffins</li>
             <img src="https://media-cdn.tripadvisor.com/media/photo-s/11/f3/4d/ac/delicious-large-muffins.jpg" 
             alt="Muffins" width="460" height="345">
-
-            <li>Donuts</li>
-
 
             
         </ol>
